--- a/index.html
+++ b/index.html
@@ -12,42 +12,83 @@
             font-family: Arial, sans-serif;
             text-align: center;
         }
+
+        h1 {
+            color: white;
+            margin-top: 50px;
+        }
+
+        /* Анимация сердечек */
         .heart {
             position: absolute;
             font-size: 20px;
             color: red;
             animation: float 5s ease-in-out infinite;
         }
+
+        /* Анимация роз */
+        .rose {
+            position: absolute;
+            font-size: 24px;
+            color: darkred;
+            animation: fall 6s ease-in-out infinite;
+        }
+
+        /* Анимация фейерверков */
+        .firework {
+            position: absolute;
+            font-size: 30px;
+            color: gold;
+            animation: explode 3s ease-in-out infinite;
+        }
+
+        /* Ключевые кадры для анимаций */
         @keyframes float {
             0% { transform: translateY(0); opacity: 1; }
             100% { transform: translateY(-500px); opacity: 0; }
         }
-        h1 {
-            color: white;
-            margin-top: 50px;
+
+        @keyframes fall {
+            0% { transform: translateY(0) rotate(0deg); opacity: 1; }
+            100% { transform: translateY(500px) rotate(360deg); opacity: 0; }
+        }
+
+        @keyframes explode {
+            0% { transform: scale(0); opacity: 1; }
+            50% { transform: scale(2); opacity: 0.5; }
+            100% { transform: scale(1); opacity: 0; }
         }
     </style>
 </head>
 <body>
     <h1>Я тебя очень люблю!</h1>
+
     <script>
-        function createHeart() {
-            const heart = document.createElement('div');
-            heart.className = 'heart';
-            heart.textContent = '❤️';
+        // Функция для создания элементов
+        function createElement(type, className, content) {
+            const element = document.createElement('div');
+            element.className = className;
+            element.textContent = content;
 
             // Рандомное положение
             const x = Math.random() * window.innerWidth;
-            heart.style.left = `${x}px`;
+            element.style.left = `${x}px`;
 
-            // Добавляем сердечко на страницу
-            document.body.appendChild(heart);
+            // Добавляем элемент на страницу
+            document.body.appendChild(element);
 
             // Удаляем после завершения анимации
-            setTimeout(() => heart.remove(), 5000);
+            setTimeout(() => element.remove(), 6000);
         }
 
-        setInterval(createHeart, 200); // Создаем новое сердечко каждые 200 мс
+        // Создание сердечек
+        setInterval(() => createElement('div', 'heart', '❤️'), 200);
+
+        // Создание роз
+        setInterval(() => createElement('div', 'rose', '🌹'), 400);
+
+        // Создание фейерверков
+        setInterval(() => createElement('div', 'firework', '✨'), 800);
     </script>
 </body>
 </html>
