--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </style>
 </head>
 <body>
-    <h1>Я тебя очень люблю!</h1>
+    <h1>Аня, я тебя очень люблю!</h1>
 
     <!-- Встраиваем аудио -->
     <audio autoplay loop>
