--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
     </style>
 </head>
 <body>
-    <h1>Аня, я тебя очень сильно люблю!❤❤❤</h1>
+    <h1>Аня, я тебя очень сильно люблю!
+Тут должна была быть песня Face-24/7 но я не смог вставить ее :c </h1>
 
     <!-- Встраиваем аудио -->
     <audio autoplay loop>
