--- a/index.html
+++ b/index.html
@@ -61,14 +61,8 @@
     </style>
 </head>
 <body>
-    <h1>Аня, я тебя очень сильно люблю!
-Тут должна была быть песня Face-24/7 но я не смог вставить ее :c </h1>
-
-    <!-- Встраиваем аудио -->
-    <audio autoplay loop>
-        <source src="https://youngestkent.github.io/love-app/music.mp3" type="audio/mpeg">
-        Your browser does not support the audio element.
-    </audio>
+    <h1> Я тебя очень сильно люблю. Тут должна была быть песня Face - Забирай все что хочешь
+Но звук не проигрывается :c Идея была в том что я готов ради тебя на многое, и если тебе грустно, всегда готов поддержать.</h1>
 
     <script>
         // Функция для создания элементов
