--- a/index.html
+++ b/index.html
@@ -12,21 +12,26 @@
             font-family: Arial, sans-serif;
             text-align: center;
             color: white; /* Цвет текста */
+            position: relative; /* Делаем body контейнером для позиционирования */
         }
 
         h1 {
             margin-top: 50px;
             font-size: 36px;
+            z-index: 2; /* Текст выше изображения */
+            position: relative; /* Для корректной работы z-index */
         }
 
         /* Стили для изображения */
         .centered-image {
             display: block; /* Изображение ведет себя как блочный элемент */
             margin: 20px auto; /* Центрируем изображение */
-            max-width: 50%; /* Изображение адаптируется под экран */
+            max-width: 100%; /* Изображение адаптируется под экран */
             height: auto; /* Сохраняем пропорции */
             border-radius: 10px; /* Добавляем закругленные углы */
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3); /* Добавляем тень */
+            z-index: 1; /* Изображение ниже анимаций */
+            position: relative; /* Для корректной работы z-index */
         }
 
         /* Анимация сердечек */
@@ -35,6 +40,7 @@
             font-size: 20px;
             color: red;
             animation: float 5s ease-in-out infinite;
+            z-index: 3; /* Анимации выше всего */
         }
 
         /* Анимация роз */
@@ -43,6 +49,7 @@
             font-size: 24px;
             color: darkred;
             animation: fall 6s ease-in-out infinite;
+            z-index: 3; /* Анимации выше всего */
         }
 
         /* Анимация фейерверков */
@@ -51,6 +58,7 @@
             font-size: 30px;
             color: gold;
             animation: explode 3s ease-in-out infinite;
+            z-index: 3; /* Анимации выше всего */
         }
 
         /* Ключевые кадры для анимаций */
@@ -77,9 +85,9 @@
 Но звук не проигрывается :c Идея была в том что я готов ради тебя на многое, и если тебе грустно, всегда готов поддержать.</h1>
 
     <!-- Изображение -->
-    <img
-        class="centered-image"
-        src="https://data.chpic.su/stickers/b/BiskvitVanillaBezTeksta/BiskvitVanillaBezTeksta_001.webp?v=1718873645"
+    <img 
+        class="centered-image" 
+        src="https://data.chpic.su/stickers/b/BiskvitVanillaBezTeksta/BiskvitVanillaBezTeksta_001.webp?v=1718873645" 
         alt="Романтическое изображение"
     >
 
@@ -107,4 +115,8 @@
         // Создание роз
         setInterval(() => createElement('div', 'rose', '🌹'), 400);
 
-        // Создание фей
+        // Создание фейерверков
+        setInterval(() => createElement('div', 'firework', '✨'), 800);
+    </script>
+</body>
+</html>
