--- a/index.html
+++ b/index.html
@@ -81,8 +81,7 @@
 </head>
 <body>
     <!-- Текст -->
-    <h1>Я тебя очень сильно люблю. Тут должна была быть песня Face - Забирай все что хочешь
-Но звук не проигрывается :c Идея была в том что я готов ради тебя на многое, и если тебе грустно, всегда готов поддержать.</h1>
+    <h1>Я тебя очень сильно люблю. Мы???? </h1>
 
     <!-- Изображение -->
     <img 
