--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <!-- Изображение -->
     <img 
         class="centered-image" 
-        src="https://youngestkent.github.io/love_app/image.jpg" 
+        src="https://data.chpic.su/stickers/b/BiskvitVanillaBezTeksta/BiskvitVanillaBezTeksta_001.webp?v=1718873645" 
         alt="Романтическое изображение"
     >
 
