--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <!-- Изображение -->
     <img 
         class="centered-image" 
-        src="https://data.chpic.su/stickers/b/BiskvitVanillaBezTeksta/BiskvitVanillaBezTeksta_001.webp?v=1718873645" 
+        src="https://3.downloader.disk.yandex.ru/preview/ef3419d7f067657e5d4d0b617a5ea0671e94baf3688505ccaf67080fdd8c0480/inf/SaahgeZcC382SH6tBENgUYMG1TJEROYFVODY-B6TCZiYdDP9z07qXMXSUiPBvrgeNn5S4dJ6eL-JKS8Aumn1Zw%3D%3D?uid=370432256&filename=1.png&disposition=inline&hash=&limit=0&content_type=image%2Fpng&owner_uid=370432256&tknv=v2&size=1855x956" 
         alt="Романтическое изображение"
     >
 
