--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <!-- Изображение -->
     <img 
         class="centered-image" 
-        src="https://sun9-25.userapi.com/s/v1/ig2/NcauYz3HxPMV-_C4cy6xUMxEQWkSEMPMPSLZHHwwei5YScJJ5pIjXkN6OjzdlYCzctb8jCwhyqyXDJx3RQSMDMe2.jpg?quality=95&as=32x32,48x48,72x72,108x108,160x160,240x240,360x360,480x480,512x512&from=bu&u=LvQ5vs86UfhINu1odG6L6ZViwHqpWc6xXRNeQJZyLYc&cs=512x512" 
+        src="https://psv4.userapi.com/s/v1/d/z7zLDB5HXRIpCq5O830blM10NzhXCsfMrop7Vf6MnFT1yIZHsn9tFjOWf0Hug1knSUnhcyyugZJPkU_vyIWMOdaSbeUeCNG_S9RGLo-mbi_3oRL_DPvsNQ/1.png" 
         alt="Романтическое изображение"
     >
 
