--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             color: white; /* Цвет текста */
             overflow-y: auto; /* Включаем вертикальную прокрутку */
             height: 150vh; /* Делаем страницу чуть длиннее для возможности скролла */
+            position: relative; /* Для корректной работы z-index */
         }
 
         h1 {
@@ -58,6 +59,7 @@
             width: 50px;
             height: 50px;
             animation: explode 3s ease-in-out infinite;
+            z-index: 4; /* Фейерверки выше всех элементов */
         }
 
         /* Ключевые кадры для анимаций */
