--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 element.textContent = content; // Для смайликов
             } else if (type === 'svg') {
                 // Создаем SVG-фейерверк
-                const svgNS = "http://www.w3.org/2000/svg"; // Пространство имен SVG
+                const svgNS = "https://www.w3.org/TR/SVG2/"; // Пространство имен SVG
                 element.setAttribute("viewBox", "0 0 50 50"); // Устанавливаем viewBox
                 element.setAttribute("xmlns", svgNS); // Добавляем пространство имен
 
