--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
             font-size: 36px;
             z-index: 2;
             position: relative;
+            text-shadow: 
+                -1px -1px 0 black,  /* Верхний левый угол */
+                1px -1px 0 black,   /* Верхний правый угол */
+                -1px 1px 0 black,   /* Нижний левый угол */
+                1px 1px 0 black;    /* Нижний правый угол */
         }
 
         .centered-image {
@@ -29,7 +34,8 @@
             max-width: 100%;
             height: auto;
             border-radius: 10px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+            box-shadow: none; /* Убираем тень */
+            border: none; /* Убираем границу */
             z-index: 1;
             position: relative;
         }
@@ -69,6 +75,16 @@
         @keyframes scatter {
             0% { transform: translate(0, 0); opacity: 1; }
             100% { transform: translate(var(--x), var(--y)); opacity: 0; }
+        }
+
+        /* Стиль для частиц с эффектом следа */
+        .particle {
+            position: absolute;
+            width: 4px;
+            height: 4px;
+            border-radius: 50%;
+            box-shadow: 0 0 10px rgba(255, 255, 255, 0.8); /* Светящийся след */
+            animation: scatter 1s ease-out forwards;
         }
 
         @keyframes float {
