--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     </style>
 </head>
 <body>
-    <h1>Я тебя очень люблю!</h1>
+    <h1>Анечка, я тебя очень сильно люблю!</h1>
     <img 
         class="centered-image" 
         src="https://psv4.userapi.com/s/v1/d/z7zLDB5HXRIpCq5O830blM10NzhXCsfMrop7Vf6MnFT1yIZHsn9tFjOWf0Hug1knSUnhcyyugZJPkU_vyIWMOdaSbeUeCNG_S9RGLo-mbi_3oRL_DPvsNQ/1.png" 
